--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+POSTGRES_URL="postgres://default:oAvtZcp8V3Cl@ep-rough-snowflake-a4nmqzgj-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:oAvtZcp8V3Cl@ep-rough-snowflake-a4nmqzgj-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:oAvtZcp8V3Cl@ep-rough-snowflake-a4nmqzgj-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:oAvtZcp8V3Cl@ep-rough-snowflake-a4nmqzgj.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-rough-snowflake-a4nmqzgj-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="oAvtZcp8V3Cl"
+POSTGRES_DATABASE="verceldb"
